--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,9 @@
               "src/styles.scss",
               "node_modules/bootstrap/SCSS/bootstrap.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/auth0-js/build/auth0.js"
+            ]
           },
           "configurations": {
             "production": {
